<resources>
    <string name="app_name">tool</string>

    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="text_clear_confirm">确定要清除吗？</string>

    <!--    reaction test-->
    <string name="reaction_test_title">反应测试</string>
    <string name="reaction_test_result">反应时间：%dms</string>
    <string name="reaction_test_record">最佳记录：%dms</string>
    <string name="reaction_test_instruction">摁下\n开始测试反应时间\n颜色改变时立即抬起手指</string>
    <string name="reaction_test_warning">注意：\n1. 测试时请保持手指在屏幕上\n2. 测试结束后再松开手指</string>

    <!--    generate random number-->
    <string name="title_generate_random_number">范围</string>
    <string name="min_generate_random_number">最小值</string>
    <string name="max_generate_random_number">最大值</string>
    <string name="amount_generate_random_number">生成数量</string>
    <string name="repeat_generate_random_number">允许重复</string>
    <string name="generate">生成</string>
    <string name="number">数字</string>
    <string name="upper_case">大写字母</string>
    <string name="lower_case">小写字母</string>
    <string name="special_character">特殊字符</string>
    <string name="length_character">文本字符长度</string>
    <string name="random_title">随机生成</string>
    <string name="random_strings">随机字符串</string>
    <string name="toast_at_least_one_character_type">请至少选择一种字符类型</string>
    <string name="toast_invalid_length">请输入有效的数字长度范围</string>
    <string name="toast_copied">已复制到剪贴板</string>
    <string name="helper_text_min_max">最小值不能大于最大值</string>
    <string name="helper_text_generate_amount">生成数量需要大于0</string>
    <string name="toast_no_repeat_exceed_range">不允许重复时，生成数量不能大于最大值与最小值的范围</string>
    <string name="toast_input_invalid">输入内容不合法，请检查后重试</string>
    <string name="random_number">随机数字</string>
</resources>