<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/tv_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_generate_random_number"
        android:textColor="@color/text_main"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_random_number_range"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_range">

        <EditText
            android:id="@+id/et_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/min_generate_random_number"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="~"
            android:textColor="@color/text_main" />

        <EditText
            android:id="@+id/et_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/max_generate_random_number"
            android:inputType="number"
            android:paddingHorizontal="20dp"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_generate_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount_generate_random_number"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_range" />

    <EditText
        android:id="@+id/et_generate_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_random_number_range"
        android:padding="5dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_generate_amount" />

    <TextView
        android:id="@+id/tv_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:text="@string/repeat_generate_random_number"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_generate_amount" />

    <Switch
        android:id="@+id/switch_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_repeat" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/generate"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat" />
</androidx.constraintlayout.widget.ConstraintLayout>